--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>gdmuds</title>
+    <title>广医试卷自动生成系统</title>
     <link href="https://fonts.loli.net/css?family=Roboto:300,400,500,700|Inconsolata:300,400,700|Material+Icons" rel="stylesheet" type="text/css">
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
